[gd_scene load_steps=9 format=3 uid="uid://c2iuqu3r3akfu"]

[ext_resource type="Texture2D" uid="uid://dehhtdsv0tnsp" path="res://assets/purchased/candylandUI/menu - Large H.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://sexyqsfjl7mk" path="res://scripts/main_menu.gd" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://g1p86hxi86u5" path="res://assets/purchased/candylandUI/x button - off.png" id="2_8ln24"]
[ext_resource type="Texture2D" uid="uid://dr86gn2n48sl" path="res://assets/purchased/candylandUI/x button - on.png" id="3_rtw2f"]
[ext_resource type="FontFile" uid="uid://s5rhbb4378ou" path="res://assets/fonts/Boxy-Bold.ttf" id="4_oa1go"]
[ext_resource type="Texture2D" uid="uid://mij0xlff44hv" path="res://assets/purchased/candylandUI/gear.png" id="5_oa1go"]
[ext_resource type="Texture2D" uid="uid://c4abslkgkdrye" path="res://assets/purchased/candylandUI/arrow - right.png" id="5_tbmy8"]
[ext_resource type="PackedScene" uid="uid://ce6w8vggk12ap" path="res://scenes/options_menu.tscn" id="8_tbmy8"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtw2f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l6cm7")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.21568628, 0.15294118, 1)
theme_override_fonts/font = ExtResource("4_oa1go")
theme_override_font_sizes/font_size = 24
text = "FUDGE FOX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture_normal = ExtResource("5_tbmy8")
stretch_mode = 5

[node name="Settings_Button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_oa1go")
stretch_mode = 0

[node name="Exit_Button" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_8ln24")
texture_pressed = ExtResource("3_rtw2f")
texture_hover = ExtResource("3_rtw2f")
stretch_mode = 5

[node name="Options_Menu" parent="." instance=ExtResource("8_tbmy8")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="exit_options_menu" from="Options_Menu" to="." method="_on_exit_options_menu"]
